--- a/prize/src/main/resources/application.properties
+++ b/prize/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8090
 
+# Datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/prize
+spring.datasource.driver.class.name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=6010405572
+spring.datasource.password=6010405572
+
+# JPA
+spring.jpa.show-sql=true
+Spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
