--- a/prize/src/main/resources/application.properties
+++ b/prize/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8090
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/prize
+spring.datasource.url=jdbc:mysql://localhost:3309/prize
 spring.datasource.driver.class.name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=6010405572
+spring.datasource.username=root
 spring.datasource.password=6010405572
 
 # JPA
