--- a/prize/pom.xml
+++ b/prize/pom.xml
@@ -15,6 +15,10 @@
 	<description>Collection prizes</description>
 	<properties>
 		<java.version>17</java.version>
+		<selenium.version>4.15.0</selenium.version>
+		<webdrivermanager.version>5.6.1</webdrivermanager.version>
+		<httpclient5.version>5.2.1</httpclient5.version>
+		<httpcore5.version>5.2.1</httpcore5.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +72,17 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>${selenium.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>${webdrivermanager.version}</version>
 		</dependency>
 
 	</dependencies>
